# inspectron

./: .gitignore  .pylintrc  Dockerfile  README.md  crawler.py  docker-compose.yml  main.py  package-lock.json  package.json  requirement.md  requirements.txt
agent-chat-ui/: package-lock.json  package.json
agent-server/: .env.example  .gitignore  README.md  eslint.config.mjs  langgraph.json  package-lock.json  package.json  tsconfig.json
api/: .env.development  .env.example  .gitignore  Dockerfile  README.md  main.py  package-lock.json  package.json  requirements.txt
crawler/: .gitignore  .pylintrc  package-lock.json  package.json  pyproject.toml  tsconfig.json
crawler/src/: index.ts
crawler/src/crawler/: __init__.py
crawler/src/crawler/core/: __init__.py  browser_tool_kit.py  element_detector.py  element_labeler.py  ollama_client.py  page_loader.py  state_manager.py
crawler/src/crawler/engine/: __init__.py  crawl_engine.py  crawler_engine.py
crawler/src/crawler/prompts/: __init__.py  crawler_decision.py
crawler/src/crawler/schemas/: __init__.py  interactable_element.py
crawler/src/crawler/types/: __init__.py  label_info.py
crawler/src/crawler/utils/: __init__.py  normalized_url.py  url_builder.py
crawler/src/vulnerability_scanner/engine/: __init__.py  scan_engine.py
crawler/src/vulnerability_scanner/scanners/: __init__.py  cookie_security_scanner.py  mixed_content_scanner.py  security_headers_scanner.py
crawler/src/vulnerability_scanner/schemas/: vulnerability.py
crawler/src/vulnerability_scanner/types/: __init__.py  vulnerability_severity.py
(+623 files in other folders)
